AV-1891: Fixed multiselect dropdown not covering new datepicker

--- a/opendata-assets/src/less/components/forms.less
+++ b/opendata-assets/src/less/components/forms.less
@@ -298,7 +298,7 @@ fieldset.checkboxes {
       border-radius: 0 0 @input-border-radius @input-border-radius;
       max-height: 300px;
       overflow-y: scroll;
-      z-index: 1;
+      z-index: 3;
     }
 
     button {
